feat: make stylesheets work again :)

--- a/app/views/lesli/partials/_application-lesli-javascript.html.erb
+++ b/app/views/lesli/partials/_application-lesli-javascript.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 <%# translation_timestamp = File.mtime(Rails.root.join("public", "javascripts", "translations.js")).to_i %>
-<%= javascript_include_tag "lib/i18n" %>
+<%= javascript_include_tag "lesli/i18n" %>
 <%#= javascript_include_tag "pdf", skip_pipeline: true %>
 <%#= javascript_include_tag "translations?#{translation_timestamp}", skip_pipeline: true %>
 
