--- a/lib/assets/stylesheets/lesli/framework/layout/application-header.scss
+++ b/lib/assets/stylesheets/lesli/framework/layout/application-header.scss
@@ -17,31 +17,28 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.tech
+@website  https://www.lesli.dev
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
-
+// · 
 */
 
-
-// · 
-// · -·-     -·-     -·-     -·-     -·-     -·-     -·-     -·-     -·-     -·-     -·-     -·-
-header.application-header {
+// ·
+header.lesli-application-header {
     top: 0;
     right: 0;
     z-index: 40;
     position: fixed;
-    padding: 20px 28px;
-    margin-bottom: 8px;
-    height: var(--lesli-header-height);
+    padding: 26px 26px 26px 5px;
+    //margin-bottom: 8px;
+    //height: var(--lesli-header-height);
     background-color: var(--lesli-header-color);
     width: calc(100% - var(--lesli-sidebar-width));
 
