--- a/app/views/lesli/partials/_application-lesli-sidebar.html.erb
+++ b/app/views/lesli/partials/_application-lesli-sidebar.html.erb
@@ -53,11 +53,12 @@ Building a better future, one line of code at a time.
 
     <%# Context message, set this message at the root of the lesli.yml or lesli.server.yml file Ej: context: "Hallo"%>
     <%# unless Rails.application.config.lesli.dig(:context).blank? %>
+    <% if false %>
         <template v-slot:context>
             <p v-cloak class="has-background-warning has-text-centered py-2">
                 <%#= Rails.application.config.lesli.dig(:context) %>
             </p>
         </template>
-    <%# end %>
+    <% end %>
 
 </application-component-sidebar>
