--- a/app/views/lesli/partials/_engine-sidebar.html.erb
+++ b/app/views/lesli/partials/_engine-sidebar.html.erb
@@ -32,8 +32,11 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%= navigation_item(lesli.account_path, I18n.t("core.shared.sidebar_nav_account"), "ri-building-4-line"); %>
-<%= navigation_item(lesli.users_path, I18n.t("core.shared.sidebar_nav_users"), "ri-user-line"); %>
+<%= navigation_item(lesli.account_path, "Account", "ri-building-4-line"); %>
+<%= navigation_item(lesli.users_path, "Users", "ri-user-line"); %>
+
+<%#= navigation_item(lesli.account_path, I18n.t("core.shared.sidebar_nav_account"), "ri-building-4-line"); %>
+<%#= navigation_item(lesli.users_path, I18n.t("core.shared.sidebar_nav_users"), "ri-user-line"); %>
 
 <%#= navigation_item(main_app.descriptors_path, "Role descriptors", "ri-shield-check-line"); %>
 <%#= navigation_item(main_app.roles_path, I18n.t("core.shared.sidebar_nav_roles_privileges"), "ri-shield-user-line"); %>
