--- a/lib/assets/stylesheets/lesli/framework/layout/application-component.scss
+++ b/lib/assets/stylesheets/lesli/framework/layout/application-component.scss
@@ -41,7 +41,7 @@ Building a better future, one line of code at a time.
 // · 
 section.application-component {
     width: 100%;
-    padding: 0 2rem;
+    padding: 0 2rem 0 1.2rem;
     margin-left: var(--lesli-sidebar-width);
     max-width: calc(100% - var(--lesli-sidebar-width));
     min-height: calc(100vh - var(--lesli-header-height) - var(--lesli-footer-height));
