--- a/lib/assets/stylesheets/lesli/framework/settings/variables.scss
+++ b/lib/assets/stylesheets/lesli/framework/settings/variables.scss
@@ -4,7 +4,7 @@
 $lesli-color-primary: #193d8d !default;
 $lesli-header-color: transparent !default;
 $lesli-footer-color: transparent !default;
-$lesli-sidebar-color: #ffffff !default;
+$lesli-sidebar-color: transparent !default;
 $lesli-sidebar-hover: #dee7ec !default;
 $lesli-color-background: #eef2f6 !default;
 $lesli-color-background: #f4f9fd !default;
