feat: single navigation header

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -42,10 +42,11 @@ Building a better future, one line of code at a time.
 <body class="<%#= application_body_class() %>">
     <main id="lesli-application" v-cloak>
         <%= render partial: "lesli/partials/application-lesli-header" %>
+        <%= render partial: "lesli/partials/application-lesli-navigation" %>
         <%#= render partial: "lesli/partials/application-lesli-notices" %>
-        <%= render partial: "lesli/partials/application-lesli-sidebar" %>
-        <%= render partial: "lesli/partials/application-lesli-content" %>
-        <%= render partial: "lesli/partials/application-lesli-engines" %>
+        <%#= render partial: "lesli/partials/application-lesli-sidebar" %>
+        <%#= render partial: "lesli/partials/application-lesli-content" %>
+        <%#= render partial: "lesli/partials/application-lesli-engines" %>
         <%#= render partial: "lesli/partials/application-lesli-panels" %>
         <%#= render partial: "lesli/partials/application-lesli-footer" %>
     </main>
