--- a/lib/sass/lesli/layouts/application-component.scss
+++ b/lib/sass/lesli/layouts/application-component.scss
@@ -34,7 +34,7 @@ Building a better future, one line of code at a time.
 
 // · 
 #lesli-application {
-    padding-top: var(--lesli-header-height);
+    //padding-top: var(--lesli-header-height);
 }
 
 
