feat: better SASS variables structure

--- a/lib/sass/lesli/layouts/application-navbar.scss
+++ b/lib/sass/lesli/layouts/application-navbar.scss
@@ -31,7 +31,8 @@ Building a better future, one line of code at a time.
 */
 
 nav.lesli-application-navigation {
-    background-color: white;
+    background-color: var(--lesli-navbar-color);
+
     ul {
         display: flex;
         justify-content: center;
