--- a/lib/assets/stylesheets/lesli/templates/application.scss
+++ b/lib/assets/stylesheets/lesli/templates/application.scss
@@ -43,13 +43,10 @@ Building a better future, one line of code at a time.
 @import "lesli/bulma/loader";
 
 
-
-
 // · Font families and icons
 @import "lesli/fonts/remixicons";
 @import "lesli/fonts/families";
 @import "lesli/fonts/mdicons";
-
 
 
 // · Some home made helpers
@@ -59,6 +56,7 @@ Building a better future, one line of code at a time.
 
 // · Lesli application layout 
 @import "lesli/layouts/application-header";
+@import "lesli/layouts/application-navbar";
 @import "lesli/layouts/application-announcements";
 @import "lesli/layouts/application-engines";
 @import "lesli/layouts/application-sidebar";
@@ -125,7 +123,6 @@ body {
     scrollbar-width: thin;
     font-weight: normal;
     line-height: 158%;
-    background-color: white;
 }
 
 
