--- a/lib/sass/lesli/settings/variables.scss
+++ b/lib/sass/lesli/settings/variables.scss
@@ -1,31 +1,61 @@
+/*
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.dev
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+*/
+
+
+// · Layout
+$lesli-font-size: 16px !default;
+$lesli-header-height: 70px !default;
+$lesli-footer-height: 84px !default;
+$lesli-sidebar-width: 50px !default;
 
 
 // · Lesli main theme definition, 
 $lesli-color-primary: #193d8d !default;
-$lesli-header-color: transparent !default;
-$lesli-footer-color: transparent !default;
-$lesli-sidebar-color: transparent !default;
-$lesli-sidebar-hover: #dee7ec !default;
-$lesli-color-background: #eef2f6 !default;
-$lesli-color-background: #f4f9fd !default;
-$lesli-color-background: #f9f5f2 !default;
+$lesli-header-color: white !default;
+$lesli-navbar-color: white !default;
+$lesli-footer-color: white !default;
+$lesli-sidebar-color: white !default;
+$lesli-sidebar-hover: white !default;
+$lesli-color-background: #f6f8fb !default;
 
 
 
 // · To understand more about customization go to:
-// · https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
+// · https://www.lesli.dev/documentation/design/20-theme
+
 
 
 // · defaults
 $lesli-logo-color: $lesli-sidebar-color;
 $lesli-font-color: lesli-css-color(black) !default;
-
-
-// · constants
-$lesli-font-size: 16px;
-$lesli-header-height: 70px;
-$lesli-footer-height: 84px;
-$lesli-sidebar-width: 50px;
 
 
 // · harcoded styles D:
@@ -43,6 +73,8 @@ $color-background: $lesli-color-background;
 
 $family-primary: "Open Sans", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
+
+
 // · here we prioritize css variables defined dynamically in the header
 // · those variable values come from the database in the account_settings table
 :root {
@@ -51,6 +83,8 @@ $family-primary: "Open Sans", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", 
     
     --lesli-header-color: var(--lesli-theme-header-color, #{$lesli-header-color});
     --lesli-header-height: var(--lesli-theme-header-height, #{$lesli-header-height});
+
+    --lesli-navbar-color: var(--lesli-theme-header-color, #{$lesli-navbar-color});
     
     --lesli-footer-color: var(--lesli-theme-footer-color, #{$lesli-footer-color});
     --lesli-footer-height: var(--lesli-theme-footer-height, #{$lesli-footer-height});
@@ -63,6 +97,7 @@ $family-primary: "Open Sans", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", 
     --lesli-font-size: var(--lesli-theme-font-size, #{$lesli-font-size});
     --lesli-font-color: var(--lesli-theme-font-color, #{$lesli-font-color});
 }
+
 
 
 // Mobile Up to 768px
