--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -36,7 +36,13 @@ Building a better future, one line of code at a time.
 <application-component-engines>
 
     <%# Core %>
-    <%= navigation_engine_lesli %>
+    <div class="test">
+        <%= navigation_engine_lesli %>
+        <ul>
+            <%= navigation_item(lesli.account_path, "Account", "ri-building-4-line"); %>
+            <%= navigation_item(lesli.users_path, "Users", "ri-user-line"); %>
+        </ul>
+    </div>
 
     <%# Administration %>
     <%= navigation_engine_team %>
