feat: add main layout

--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -55,6 +55,7 @@ $table-cell-padding: 1rem;
 
 @import "bulma/sass/elements/container";
 @import "bulma/sass/elements/image";
+@import "bulma/sass/elements/title";
 
 
 
