--- a/lib/sass/lesli/elements/header.scss
+++ b/lib/sass/lesli/elements/header.scss
@@ -33,15 +33,14 @@ Building a better future, one line of code at a time.
 
 
 // · 
-.lesli-header {
-    margin-bottom: 32px;
+.lesli-element-header {
+    margin: 40px auto 30px;
 
     .navbar-brand{
         max-width: 700px;
         width: auto;
-        .title {
-            font-weight: 400;
-        }
+
+        // header icon
         span {
             font-size: 30px;
             padding-right: 15px;
