--- a/lib/sass/lesli/layouts/application-component.scss
+++ b/lib/sass/lesli/layouts/application-component.scss
@@ -42,8 +42,8 @@ Building a better future, one line of code at a time.
 section.application-component {
     width: 100%;
     padding: 0 2rem 0 1.2rem;
-    margin-left: var(--lesli-sidebar-width);
-    max-width: calc(100% - var(--lesli-sidebar-width));
+    // margin-left: var(--lesli-sidebar-width);
+    // max-width: calc(100% - var(--lesli-sidebar-width));
     min-height: calc(100vh - var(--lesli-header-height) - var(--lesli-footer-height));
     min-height: calc(100vh - var(--lesli-header-height)); // footer is not enable
 }
