feat: fix application header layout

--- a/lib/sass/lesli/elements/header.scss
+++ b/lib/sass/lesli/elements/header.scss
@@ -36,26 +36,9 @@ Building a better future, one line of code at a time.
 .lesli-element-header {
     margin: 40px auto 30px;
 
-    .navbar-brand{
-        max-width: 700px;
-        width: auto;
-
-        // header icon
-        span {
-            font-size: 30px;
-            padding-right: 15px;
-        }
-    }
-
-    .navbar-item {
-        padding: 0;
-        max-width: fit-content;
-    }
-
-    .actions {
+    .lesli-element-header-items {
         display: flex;
         gap: 0.5rem;
         align-items: center;
     }
 }
-
