--- a/lib/sass/lesli/layouts/application-component.scss
+++ b/lib/sass/lesli/layouts/application-component.scss
@@ -35,15 +35,16 @@ Building a better future, one line of code at a time.
 // · 
 #lesli-application {
     //padding-top: var(--lesli-header-height);
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
 // · 
-section.application-component {
-    width: 100%;
-    padding: 0 2rem 0 1.2rem;
+section.lesli-element-content {
     // margin-left: var(--lesli-sidebar-width);
     // max-width: calc(100% - var(--lesli-sidebar-width));
-    min-height: calc(100vh - var(--lesli-header-height) - var(--lesli-footer-height));
-    min-height: calc(100vh - var(--lesli-header-height)); // footer is not enable
+    // min-height: calc(100vh - var(--lesli-header-height) - var(--lesli-footer-height));
+    // min-height: calc(100vh - var(--lesli-header-height)); // footer is not enable
+    // background-color: aquamarine;
 }
