--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -18,13 +18,13 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.tech
+@website  https://www.lesli.dev
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -36,13 +36,7 @@ Building a better future, one line of code at a time.
 <application-component-engines>
 
     <%# Core %>
-    <div class="test">
-        <%= navigation_engine_lesli %>
-        <ul>
-            <%= navigation_item(lesli.account_path, "Account", "ri-building-4-line"); %>
-            <%= navigation_item(lesli.users_path, "Users", "ri-user-line"); %>
-        </ul>
-    </div>
+    <%= navigation_engine_lesli %>
 
     <%# Administration %>
     <%= navigation_engine_team %>
